--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  
+    <img src="Images/headerImage.png" alt="" srcset="">
+    <img src="Images/supportAnton.png" alt="" srcset="">
+    
 </body>
 </html>
