--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <Header>
       <nav class="navbar nav">
-        <div class="leftNav">
+        <div class="leftNav centerFlex">
           <div class="ImageLogo">
             <img src="Images/supportAnton.png" alt="Logo Support">
           </div>
@@ -38,16 +38,16 @@
             </svg>
           </div>
         </div>
-        <div class="RightNav">
+        <div class="RightNav centerFlex">
           <div class="SearchBar">
             <div class="inputSearch">
               <input id="SearchInput" placeholder="search" type="text">
             </div>
-            <div class="iconSearch">
+            <div class="iconSearch centerFlex">
               <i class="fas fa-search" style="color: white;"></i>
             </div>
           </div>
-            <ul class="list-unstyled">
+            <ul class="list-unstyled centerFlex">
             <li class="list-inline-item active">
               <a href="">
                 <p class="active">
@@ -76,7 +76,6 @@
                 </p>
               </a>
             </li>
-          
           </ul>
         </div>
       </nav>
