--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="Images/supportAnton.ico">
   <link rel="stylesheet" href="Assest/BootstrapFiles/css/bootstrap.min.css">
   <link rel="stylesheet" href="Assest/BootstrapFiles/css/all.min.css">
   <link rel="stylesheet" href="Style/style.css">
   <title>Home</title>
 </head>
   <body>
+    <!--Element Background Image-->
+      <div id="backgroundColor">
+      </div>
+      <div id="backgroundWaveTop">
+      </div>
+      <img src="/Images/BacgroundWavebottom.png" id="backgroundWaveBottom" alt="" srcset="">
+      <img src="/Images/backgroundWaveBottomRight.png" id="backgroundWaveBottomLeft">
+      </img>
+    <!--End Background Image -->
     <Header>
       <nav class="navbar nav">
         <div class="leftNav centerFlex">
