--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/x-icon" href="Images/supportAnton.ico">
   <link rel="stylesheet" href="Assest/BootstrapFiles/css/bootstrap.min.css">
   <link rel="stylesheet" href="Assest/BootstrapFiles/css/all.min.css">
+  <link rel="stylesheet" href="Style/Responsive.css">
+
   <link rel="stylesheet" href="Style/style.css">
   <title>Home</title>
 </head>
@@ -20,7 +22,7 @@
       </img>
     <!--End Background Image -->
     <Header>
-      <nav class="navbar nav">
+      <nav class="navbar nav container">
         <div class="leftNav centerFlex">
           <div class="ImageLogo">
             <img src="Images/supportAnton.png" alt="Logo Support">
@@ -90,6 +92,24 @@
         </div>
       </nav>
     </Header>
+    <section class="container">
+      <div class="ContainerText">
+        
+        <a href="" class="TextChange ActiveText">
+          news
+        </a>
+        <span class="LineBetText"></span>
+        <a href="" class="TextChange">
+          event
+        </a>
+      </div>
+      <div class="MarkLine">
+          <div class="line">
+          </div>
+          <div class="smallLine"></div>
+          <div class="circle"></div>
+      </div>
+    </section>
     <script src="Assest/BootstrapFiles/js/all.min.js"></script>
     <script src="Assest/BootstrapFiles/js/bootstrap.bundle.min.js"></script>
     <script src="Javascript/main.js"></script>
