--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       </nav>
     </Header>
-    <section class="container">
+    <section class="container SectionKero">
       <div class="ContainerText">
         
         <a href="" class="TextChange ActiveText">
@@ -109,6 +109,141 @@
           <div class="smallLine"></div>
           <div class="circle"></div>
       </div>
+      <div id="MyDivId" class="cards row ">
+        <div class="col-lg-12 keroCard">
+          <div class="row">
+            <div class="cardChild col-lg-5">
+              <div class="TopCard">
+                <div class="ImageCard">
+                  <img src="Images/HomeImage.png" alt="" srcset="">
+                </div>
+                <div class="textCard">
+                  <p>recruitment Day</p>
+                </div>
+              </div>
+              <div class="bottomCard">
+                <div class="headerInfo">
+                  <h3>Notes</h3>
+                </div>
+                <div class="pointsInfo">
+                  <ul>
+                    <li> notes </li>
+                    <li> notes </li>
+                    <li> notes </li>
+                  </ul>
+                </div>
+                <div class="button">
+                  <button class="SeeMore">
+                    see more
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Description AntonHideLeftSide col-lg-5">
+                <div class="headerDes">
+                  <h3>description</h3>
+                </div>
+                <div class="bodyDes">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
+                </div>
+                <div class="button">
+                  <button class="SeeLess">
+                    see less
+                  </button>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-11 keroCard" dir="rtl">
+          <div class="row">
+            <div class="cardChild col-lg-5" dir="ltr">
+              <div class="TopCard">
+                <div class="ImageCard">
+                  <img src="Images/HomeImage.png" alt="" srcset="">
+                </div>
+                <div class="textCard">
+                  <p>recruitment Day</p>
+                </div>
+              </div>
+              <div class="bottomCard">
+                <div class="headerInfo">
+                  <h3>Notes</h3>
+                </div>
+                <div class="pointsInfo">
+                  <ul>
+                    <li> notes </li>
+                    <li> notes </li>
+                    <li> notes </li>
+                  </ul>
+                </div>
+                <div class="button">
+                  <button class="SeeMore">
+                    see more
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Description AntonHideLeftSide col-lg-5" dir="ltr">
+                <div class="headerDes">
+                  <h3>description</h3>
+                </div>
+                <div class="bodyDes">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
+                </div>
+                <div class="button">
+                  <button class="SeeLess">
+                    see less
+                  </button>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-12 keroCard">
+          <div class="row">
+            <div class="cardChild col-lg-5">
+              <div class="TopCard">
+                <div class="ImageCard">
+                  <img src="Images/HomeImage.png" alt="" srcset="">
+                </div>
+                <div class="textCard">
+                  <p>recruitment Day</p>
+                </div>
+              </div>
+              <div class="bottomCard">
+                <div class="headerInfo">
+                  <h3>Notes</h3>
+                </div>
+                <div class="pointsInfo">
+                  <ul>
+                    <li> notes </li>
+                    <li> notes </li>
+                    <li> notes </li>
+                  </ul>
+                </div>
+                <div class="button">
+                  <button class="SeeMore">
+                    see more
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Description AntonHideLeftSide col-lg-5">
+                <div class="headerDes">
+                  <h3>description</h3>
+                </div>
+                <div class="bodyDes">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
+                </div>
+                <div class="button">
+                  <button class="SeeLess">
+                    see less
+                  </button>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
     <script src="Assest/BootstrapFiles/js/all.min.js"></script>
     <script src="Assest/BootstrapFiles/js/bootstrap.bundle.min.js"></script>
