--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="">
+              <a href="Pages/About.html">
                 <p>
                 About us
                 </p>
@@ -109,10 +109,10 @@
           <div class="smallLine"></div>
           <div class="circle"></div>
       </div>
-      <div id="MyDivId" class="cards row ">
+      <div id="News" class="cards row ">
         <div class="col-lg-12 keroCard">
           <div class="row">
-            <div class="cardChild col-lg-5">
+            <div class="cardChild col-lg-6">
               <div class="TopCard">
                 <div class="ImageCard">
                   <img src="Images/HomeImage.png" alt="" srcset="">
@@ -147,7 +147,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
                 </div>
                 <div class="button">
-                  <button class="SeeLess">
+                  <button class="SeeLess odd">
                     see less
                   </button>
                 </div>
@@ -156,7 +156,7 @@
         </div>
         <div class="col-lg-11 keroCard" dir="rtl">
           <div class="row">
-            <div class="cardChild col-lg-5" dir="ltr">
+            <div class="cardChild col-lg-6" dir="ltr">
               <div class="TopCard">
                 <div class="ImageCard">
                   <img src="Images/HomeImage.png" alt="" srcset="">
@@ -191,7 +191,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
                 </div>
                 <div class="button">
-                  <button class="SeeLess">
+                  <button class="SeeLess even">
                     see less
                   </button>
                 </div>
@@ -200,7 +200,7 @@
         </div>
         <div class="col-lg-12 keroCard">
           <div class="row">
-            <div class="cardChild col-lg-5">
+            <div class="cardChild col-lg-6">
               <div class="TopCard">
                 <div class="ImageCard">
                   <img src="Images/HomeImage.png" alt="" srcset="">
@@ -235,7 +235,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
                 </div>
                 <div class="button">
-                  <button class="SeeLess">
+                  <button class="SeeLess odd">
                     see less
                   </button>
                 </div>
@@ -243,7 +243,140 @@
           </div>
         </div>
       </div>
-
+      <div id="Events" class="cards row ">
+        <div class="col-lg-12 keroCard">
+          <div class="row">
+            <div class="cardChild col-lg-6">
+              <div class="TopCard">
+                <div class="ImageCard">
+                  <img src="Images/HomeImage.png" alt="" srcset="">
+                </div>
+                <div class="textCard">
+                  <p>recruitment Day Events</p>
+                </div>
+              </div>
+              <div class="bottomCard">
+                <div class="headerInfo">
+                  <h3>Notes</h3>
+                </div>
+                <div class="pointsInfo">
+                  <ul>
+                    <li> notes </li>
+                    <li> notes </li>
+                    <li> notes </li>
+                  </ul>
+                </div>
+                <div class="button">
+                  <button class="SeeMore">
+                    see more
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Description AntonHideLeftSide col-lg-5">
+                <div class="headerDes">
+                  <h3>description</h3>
+                </div>
+                <div class="bodyDes">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
+                </div>
+                <div class="button">
+                  <button class="SeeLess odd">
+                    see less
+                  </button>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-11 keroCard" dir="rtl">
+          <div class="row">
+            <div class="cardChild col-lg-6" dir="ltr">
+              <div class="TopCard">
+                <div class="ImageCard">
+                  <img src="Images/HomeImage.png" alt="" srcset="">
+                </div>
+                <div class="textCard">
+                  <p>recruitment Day Events</p>
+                </div>
+              </div>
+              <div class="bottomCard">
+                <div class="headerInfo">
+                  <h3>Notes</h3>
+                </div>
+                <div class="pointsInfo">
+                  <ul>
+                    <li> notes </li>
+                    <li> notes </li>
+                    <li> notes </li>
+                  </ul>
+                </div>
+                <div class="button">
+                  <button class="SeeMore">
+                    see more
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Description AntonHideLeftSide col-lg-5" dir="ltr">
+                <div class="headerDes">
+                  <h3>description</h3>
+                </div>
+                <div class="bodyDes">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
+                </div>
+                <div class="button">
+                  <button class="SeeLess even">
+                    see less
+                  </button>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-12 keroCard">
+          <div class="row">
+            <div class="cardChild col-lg-6">
+              <div class="TopCard">
+                <div class="ImageCard">
+                  <img src="Images/HomeImage.png" alt="" srcset="">
+                </div>
+                <div class="textCard">
+                  <p>recruitment Day Events</p>
+                </div>
+              </div>
+              <div class="bottomCard">
+                <div class="headerInfo">
+                  <h3>Notes</h3>
+                </div>
+                <div class="pointsInfo">
+                  <ul>
+                    <li> notes </li>
+                    <li> notes </li>
+                    <li> notes </li>
+                  </ul>
+                </div>
+                <div class="button">
+                  <button class="SeeMore">
+                    see more
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Description AntonHideLeftSide col-lg-5">
+                <div class="headerDes">
+                  <h3>description</h3>
+                </div>
+                <div class="bodyDes">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id lorem interdum, tincidunt turpis vel, sollicitudin orci. Aliquam non tempus lacus. In sagittis congue libero id posuere. Ut sit amet efficitur sapien, et laoreet eros. Suspendisse sit amet hendrerit nunc. Mauris venenatis neque a sapien dictum lacinia. Mauris maximus tellus et ligula iaculis, id condimentum felis accumsan. Duis lacus nulla, volutpat quis viverra sit amet, dignissim at diam. Quisque interdum neque sed leo volutpat euismod. Fusce sapien odio, pellentesque in laoreet consectetur, maximus nec felis. Aliquam ex ante, luctus in orci at, volutpat vestibulum lectus. Nunc rutrum mauris efficitur, tempus eros a, dictum risus.</p>
+                </div>
+                <div class="button">
+                  <button class="SeeLess odd">
+                    see less
+                  </button>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="Assest/BootstrapFiles/js/all.min.js"></script>
     <script src="Assest/BootstrapFiles/js/bootstrap.bundle.min.js"></script>
