--- a/Pages/About.html
+++ b/Pages/About.html
@@ -18,6 +18,7 @@
         </div>
         <img src="../Images/BacgroundWavebottom.png" id="backgroundWaveBottom" alt="" srcset="">
         <img src="../Images/backgroundWaveBottomRight.png" id="backgroundWaveBottomLeft">
+
         </img>
     <!--End Background Image -->
     <Header>
@@ -60,8 +61,8 @@
             </div>
             <ul class="list-unstyled centerFlex">
             <li class="list-inline-item active">
-                <a href="">
-                <p class="active">
+                <a href="../index.html">
+                <p >
                     Home
                 </p>
                 </a>
@@ -74,8 +75,8 @@
                 </a>
             </li>
             <li class="list-inline-item">
-                <a href="">
-                <p>
+                <a href="" >
+                <p class="active">
                 About us
                 </p>
             </a>
