--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </p>
               </a>
             </li>
-            <li class="list-inline-item">
+            <li class="list-inline-item committee">
               <a href="">
                 <p>
                   committees
@@ -91,6 +91,43 @@
           </ul>
         </div>
       </nav>
+      <div class="CommitteeSection">
+        <ul class="list-unstyled">
+          <li class="list-inline-item centerFlex">
+            <p>HR</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>PR</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>Web</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>Media</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>Network</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>Game</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>Testing</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>Flutter</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>Android</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>CyberSecurity</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>MachineLearning</p>
+          </li>
+        </ul>
+      </div>
     </Header>
     <section class="container SectionKero">
       <div class="ContainerText">
