--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <title>Home</title>
 </head>
   <body>
+
+
     <!--Element Background Image-->
       <div id="backgroundColor">
       </div>
@@ -22,6 +24,27 @@
       </img>
     <!--End Background Image -->
     <Header>
+      <button class="toggle-btn" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <div class="side-menu" id="sideMenu">
+        <ul class="list-unstyled SideMenuList">
+            <li class="list-item"><a class="btn" href="#">Home</a></li>
+            <li  class="list-item"><a class="btn" href="#">committees</a></li>
+            <li  class="list-item"><a class="btn" href="#">About</a></li>
+            <li  class="list-item"><a class="btn" href="#">Login</a></li>
+        </ul>
+  
+        <ul class="list-unstyled SocialIcons">
+            <li class="list-inline-item"><i class="fa-brands fa-facebook"></i></li>
+            <li class="list-inline-item"><i  class="fa-brands fa-instagram"></i></li>
+            <li class="list-inline-item"><i  class="fa-brands fa-twitter"></i></li>
+        </ul>   
+        
+    </div>
+    
       <nav class="navbar nav container">
         <div class="leftNav centerFlex">
           <div class="ImageLogo">
