--- a/Pages/About.html
+++ b/Pages/About.html
@@ -32,10 +32,10 @@
         </button>
         <div class="side-menu" id="sideMenu">
             <ul class="list-unstyled SideMenuList">
-                <li class="list-item"><a class="btn" href="#">Home</a></li>
-                <li  class="list-item"><a class="btn" href="#">committees</a></li>
-                <li  class="list-item"><a class="btn" href="#">About</a></li>
-                <li  class="list-item"><a class="btn" href="#">Login</a></li>
+                <li class="list-item"><a class="btn" href="../index.html">Home</a></li>
+                <li  class="list-item CommitteAnton"><a class="btn" href="">committees</a></li>
+                <li  class="list-item"><a class="btn" href="">About</a></li>
+                <li  class="list-item"><a class="btn" href="">Login</a></li>
             </ul>
 
             <ul class="list-unstyled SocialIcons">
@@ -92,7 +92,7 @@
                 </p>
                 </a>
             </li>
-            <li class="list-inline-item">
+            <li class="list-inline-item committee">
                 <a href="">
                 <p>
                     committees
@@ -116,6 +116,43 @@
             </ul>
         </div>
         </nav>
+        <div class="CommitteeSection">
+            <ul class="list-unstyled">
+              <li class="list-inline-item centerFlex">
+                <p>HR</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>PR</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>Web</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>Game</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>Media</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>Flutter</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>Testing</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>Android</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>Network</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>CyberSecurity</p>
+              </li>
+              <li class="list-inline-item centerFlex">
+                <p>MachineLearning</p>
+              </li>
+            </ul>
+          </div>
     </Header>
 
     <section class="AboutSection">
