--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" type="image/x-icon" href="Images/supportAnton.ico">
   <link rel="stylesheet" href="Assest/BootstrapFiles/css/bootstrap.min.css">
   <link rel="stylesheet" href="Assest/BootstrapFiles/css/all.min.css">
+  <link rel="stylesheet" href="Style/style.css">
   <link rel="stylesheet" href="Style/Responsive.css">
 
-  <link rel="stylesheet" href="Style/style.css">
   <title>Home</title>
 </head>
   <body>
@@ -31,10 +31,10 @@
     </button>
     <div class="side-menu" id="sideMenu">
         <ul class="list-unstyled SideMenuList">
-            <li class="list-item"><a class="btn" href="#">Home</a></li>
-            <li  class="list-item"><a class="btn" href="#">committees</a></li>
-            <li  class="list-item"><a class="btn" href="#">About</a></li>
-            <li  class="list-item"><a class="btn" href="#">Login</a></li>
+            <li class="list-item"><a class="btn" href="">Home</a></li>
+            <li  class="list-item CommitteAnton"><a class="btn" href="">committees</a></li>
+            <li  class="list-item"><a class="btn" href="Pages/About.html">About</a></li>
+            <li  class="list-item"><a class="btn" href="">Login</a></li>
         </ul>
   
         <ul class="list-unstyled SocialIcons">
@@ -126,22 +126,22 @@
             <p>Web</p>
           </li>
           <li class="list-inline-item centerFlex">
-            <p>Media</p>
-          </li>
-          <li class="list-inline-item centerFlex">
-            <p>Network</p>
-          </li>
-          <li class="list-inline-item centerFlex">
             <p>Game</p>
           </li>
           <li class="list-inline-item centerFlex">
-            <p>Testing</p>
+            <p>Media</p>
           </li>
           <li class="list-inline-item centerFlex">
             <p>Flutter</p>
           </li>
           <li class="list-inline-item centerFlex">
+            <p>Testing</p>
+          </li>
+          <li class="list-inline-item centerFlex">
             <p>Android</p>
+          </li>
+          <li class="list-inline-item centerFlex">
+            <p>Network</p>
           </li>
           <li class="list-inline-item centerFlex">
             <p>CyberSecurity</p>
