--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
     <section class="container SectionKero">
       <div class="ContainerText">
         
-        <a href="" class="TextChange TextStyle ActiveText">
+        <a href="" class="TextChange TextStyle CustomClass1 ActiveText">
           news
         </a>
         <span class="LineBetText"></span>
-        <a href="" class="TextChange TextStyle">
+        <a href="" class="TextChange TextStyle CustomClass">
           event
         </a>
       </div>
