--- a/Pages/About.html
+++ b/Pages/About.html
@@ -205,39 +205,39 @@
           </div>
         </nav>
         <div class="CommitteeSection">
-          <ul class="list-unstyled">
-            <li class="list-inline-item centerFlex">
+          <ul class="list-unstyled row">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle" >HR</p>
             </li>
-            <li class="list-inline-item centerFlex">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle">PR</p>
             </li>
-            <li class="list-inline-item centerFlex">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle">Web</p>
             </li>
-            <li class="list-inline-item centerFlex">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle">Game</p>
             </li>
-            <li class="list-inline-item centerFlex">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle">Media</p>
             </li>
-            <li class="list-inline-item centerFlex">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle">Flutter</p>
             </li>
-            <li class="list-inline-item centerFlex">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle">Testing</p>
             </li>
-            <li class="list-inline-item centerFlex">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle">Android</p>
             </li>
-            <li class="list-inline-item centerFlex">
+            <li class="list-inline-item centerFlex col-lg-1">
               <p class="TextStyle">Network</p>
             </li>
-            <li class="list-inline-item centerFlex">
-              <p class="TextStyle">CyberSecurity</p>
+            <li class="list-inline-item centerFlex col-lg-1">
+              <p class="TextStyle" style="font-size: 11px;">CyberSecurity</p>
             </li>
-            <li class="list-inline-item centerFlex">
-              <p class="TextStyle">MachineLearning</p>
+            <li class="list-inline-item centerFlex col-lg-1">
+              <p class="TextStyle">ML</p>
             </li>
           </ul>
         </div>
