--- a/index.html
+++ b/index.html
@@ -82,43 +82,48 @@
             <li class="list-item"><a class="btn" href="">Home</a></li>
             <!-- <li  class="list-item CommitteAnton"><a class="btn" href="">committees</a></li> -->
             <li  class="list-item" style="height: fit-content;">
-              <a class="CommitteeSideBarBtn btn" href="">committees</a>
-              
-                <ul class="CommitteeSideUl list-unstyled row">
-                  <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle" >HR</p>
-                  </li>
-                  <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle">PR</p>
-                  </li>
-                  <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle">Web</p>
-                  </li>
-                  <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle">Game</p>
+              <div class="ContainerArrow">
+                <a class="CommitteeSideBarBtn btn" href="">committees</a>
+                <div class="Arrow">
+                  <span class="ArrowLine"></span>
+                  <span class="ArrowLine"></span>
+                </div>
+              </div>
+              <ul class="CommitteeSideUl list-unstyled row">
+                <li class="list-inline-item centerFlex col-lg-1">
+                  <p class="MenuTextStyle">Android</p>
+                </li>
+                <li class="list-inline-item centerFlex col-lg-1">
+                  <p class="MenuTextStyle">CyberSecurity</p>
+                </li>
+                <li class="list-inline-item centerFlex col-lg-1">
+                  <p class="MenuTextStyle">Flutter</p>
+                </li>
+                <li class="list-inline-item centerFlex col-lg-1">
+                  <p class="MenuTextStyle">Game</p>
+                </li>
+                <li class="list-inline-item centerFlex col-lg-1">
+                  <p class="MenuTextStyle" >HR</p>
                   </li>
                   <li class="list-inline-item centerFlex col-lg-1">
                     <p class="MenuTextStyle">Media</p>
                   </li>
                   <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle">Flutter</p>
-                  </li>
-                  <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle">Testing</p>
-                  </li>
-                  <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle">Android</p>
+                    <p class="MenuTextStyle">ML</p>
                   </li>
                   <li class="list-inline-item centerFlex col-lg-1">
                     <p class="MenuTextStyle">Network</p>
                   </li>
                   <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle">CyberSecurity</p>
+                    <p class="MenuTextStyle">PR</p>
                   </li>
                   <li class="list-inline-item centerFlex col-lg-1">
-                    <p class="MenuTextStyle">ML</p>
+                    <p class="MenuTextStyle">Testing</p>
                   </li>
-                </ul>
+                  <li class="list-inline-item centerFlex col-lg-1">
+                    <p class="MenuTextStyle">Web</p>
+                  </li>
+              </ul>
               
             </li>
             <li  class="list-item"><a class="btn" href="Pages/About.html">About</a></li>
@@ -207,37 +212,37 @@
       <div class="CommitteeSection">
         <ul class="list-unstyled row">
           <li class="list-inline-item centerFlex col-lg-1">
-            <p class="TextStyle" >HR</p>
-          </li>
-          <li class="list-inline-item centerFlex col-lg-1">
-            <p class="TextStyle">PR</p>
-          </li>
-          <li class="list-inline-item centerFlex col-lg-1">
-            <p class="TextStyle">Web</p>
-          </li>
-          <li class="list-inline-item centerFlex col-lg-1">
-            <p class="TextStyle">Game</p>
-          </li>
-          <li class="list-inline-item centerFlex col-lg-1">
-            <p class="TextStyle">Media</p>
-          </li>
-          <li class="list-inline-item centerFlex col-lg-1">
-            <p class="TextStyle">Flutter</p>
-          </li>
-          <li class="list-inline-item centerFlex col-lg-1">
-            <p class="TextStyle">Testing</p>
-          </li>
-          <li class="list-inline-item centerFlex col-lg-1">
             <p class="TextStyle">Android</p>
-          </li>
-          <li class="list-inline-item centerFlex col-lg-1">
-            <p class="TextStyle">Network</p>
           </li>
           <li class="list-inline-item centerFlex col-lg-1">
             <p class="TextStyle" style="font-size: 11px;">CyberSecurity</p>
           </li>
           <li class="list-inline-item centerFlex col-lg-1">
+            <p class="TextStyle">Flutter</p>
+          </li>
+          <li class="list-inline-item centerFlex col-lg-1">
+            <p class="TextStyle">Game</p>
+          </li>
+          <li class="list-inline-item centerFlex col-lg-1">
+            <p class="TextStyle" >HR</p>
+          </li>
+          <li class="list-inline-item centerFlex col-lg-1">
+            <p class="TextStyle">Media</p>
+          </li>
+          <li class="list-inline-item centerFlex col-lg-1">
             <p class="TextStyle">ML</p>
+          </li>
+          <li class="list-inline-item centerFlex col-lg-1">
+            <p class="TextStyle">Network</p>
+          </li>
+          <li class="list-inline-item centerFlex col-lg-1">
+            <p class="TextStyle">PR</p>
+          </li>
+          <li class="list-inline-item centerFlex col-lg-1">
+            <p class="TextStyle">Testing</p>
+          </li>
+          <li class="list-inline-item centerFlex col-lg-1">
+            <p class="TextStyle">Web</p>
           </li>
         </ul>
       </div>
