--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
   <title>Home</title>
 </head>
   <body>
+  <div class="LoadingPage" style="position: fixed;z-index: 100000; height: 100vh; width: 100%; background-color: #3b3b3b; top:0; display: flex; justify-content: center;align-items: center;">
+    <img src="Images/Loadin.gif" alt="" srcset="" style="    height: 260px;
+    width: 330px;">
+  </div>
   <!--Start Login-->
   <div class="mainLogin">
-    <div class="login">
+    <div class="login" >
       <div class="backgroundImage">
         <svg xmlns="http://www.w3.org/2000/svg" width="460" height="300" viewBox="0 0 1191 632" fill="none">
           <g filter="url(#filter0_d_115_87)">
